--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=technicalTest;Username=postgres;Password=root"
+       "DefaultConnection": "Host=<RAILWAY_DB_HOST>;Port=<RAILWAY_DB_PORT>;Database=<RAILWAY_DB_NAME>;Username=<RAILWAY_DB_USER>;Password=<RAILWAY_DB_PASSWORD>"
     }
 }
