add deploy config

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-       "DefaultConnection": "Host=<RAILWAY_DB_HOST>;Port=<RAILWAY_DB_PORT>;Database=<RAILWAY_DB_NAME>;Username=<RAILWAY_DB_USER>;Password=<RAILWAY_DB_PASSWORD>"
+       "DefaultConnection": "Host=<DB_HOST>;Port=<DB_PORT>;Database=<DB_NAME>;Username=<DB_USER>;Password=<DB_PASSWORD>"
     }
 }
